syntax ="proto3";

option csharp_namespace = "GrpcExample1";

package proto;

message HelloWordEnviado
{
	string helloWord=1;
}

message HelloWordResivido
{
	string message=1;
}

service Saludador
{
	rpc Saludo(HelloWordEnviado)returns (HelloWordResivido);
}
